<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>
    <string name="activity_main_title">My Nanodegree Apps!</string>
    <string name="activity_main_text_btn_spotify">Spotify Streamer</string>
    <string name="activity_main_text_btn_scores">Scores App</string>
    <string name="activity_main_text_btn_library">Library App</string>
    <string name="activity_main_text_btn_build_it">Build It Bigger</string>
    <string name="activity_main_text_btn_xyz_reader">XYZ Reader</string>
    <string name="activity_main_text_btn_capstone">Capstone: My Own App</string>
</resources>
